registry/registry-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-registry-ui
  namespace: registry
spec:
  selector:
    matchLabels:
      app: dev-registry-ui
  template:
    metadata:
      labels:
        app: dev-registry-ui
    spec:
      containers:
      - name: registry-ui
        image: joxit/docker-registry-ui
        resources:
          limits:
            memory: "128Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dev-registry-ui-service
  namespace: registry
spec:
  selector:
    app: dev-registry-ui
  ports:
  - port: 80
    targetPort: 80
