registry/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.7.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "50m"
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /var/lib/registry
            name: vol
            subPath: data
          - name: auth-secret-volume
            readOnly: true
            mountPath: "/auth"
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: registry-claim
        - name: auth-secret-volume
          secret:
            secretName: auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
